force-app/main/default/objects/KDCE_DropOutOrderLineItem__c/KDCE_DropOutOrderLineItem__c.object-meta.xml
<CustomObject>
    <description>탈퇴 고객 중 OrderLineItem에 대한 정보 분리 보관</description>
    <label>DropOut OrderLineItem</label>
    <nameField>
        <label>DropOut Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DropOut OrderLineItem</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>