force-app/main/default/objects/KDCE_DropOutOrderLineItem__c/fields/FullProductId__c.field-meta.xml
<CustomField>
    <fullName>FullProductId__c</fullName>
    <description>[KDCE] Full 품목코드
Mapping Column : full_product_id</description>
    <inlineHelpText>Full 품목코드</inlineHelpText>
    <label>Full Product Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>