force-app/main/default/objects/KDCE_DropOutOrderLineItem__c/fields/LinkedItem__c.field-meta.xml
<CustomField>
    <fullName>LinkedItem__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Linked Item</label>
    <type>Checkbox</type>
</CustomField>