force-app/main/default/objects/KDCE_DropOutOrderLineItem__c/fields/OrderStatus__c.field-meta.xml
<CustomField>
    <fullName>OrderStatus__c</fullName>
    <description>[KDCE] 주문 상태
Mapping Column : order_status</description>
    <inlineHelpText>주문 상태</inlineHelpText>
    <label>Order Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>pending</fullName>
                <label>Pending</label>
            </value>
            <value>
                <fullName>processing</fullName>
                <label>Processing</label>
            </value>
            <value>
                <fullName>ready_for_delivery</fullName>
            </value>
            <value>
                <fullName>picking</fullName>
            </value>
            <value>
                <fullName>delivery_collection</fullName>
            </value>
            <value>
                <fullName>complete_delivery</fullName>
            </value>
            <value>
                <fullName>closed</fullName>
                <label>Closed</label>
            </value>
            <value>
                <fullName>cancel</fullName>
            </value>
            <value>
                <fullName>cancel_order</fullName>
            </value>
            <value>
                <fullName>return_received</fullName>
            </value>
            <value>
                <fullName>reject</fullName>
            </value>
            <value>
                <fullName>authorized</fullName>
            </value>
            <value>
                <fullName>approved</fullName>
            </value>
            <value>
                <fullName>delivered</fullName>
            </value>
            <value>
                <fullName>renting</fullName>
            </value>
            <value>
                <fullName>complete</fullName>
                <label>Complete</label>
            </value>
            <value>
                <fullName>paid</fullName>
            </value>
            <value>
                <fullName>received</fullName>
            </value>
            <value>
                <fullName>processed_closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>