force-app/main/default/objects/KDCE_DropOutOrderLineItem__c/fields/ProductQuantity__c.field-meta.xml
<CustomField>
    <fullName>ProductQuantity__c</fullName>
    <description>[KDCE] 구매 수량
Mapping Column : product_quantity</description>
    <inlineHelpText>구매 수량</inlineHelpText>
    <label>Product Quantity</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>