force-app/main/default/objects/KDCE_DropOutOrderLineItem__c/fields/ProductSupplyPrice__c.field-meta.xml
<CustomField>
    <fullName>ProductSupplyPrice__c</fullName>
    <label>Product Supply Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>